# consulta_de_cedulas

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
