[project]
name = "t-cedscript"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bs4>=0.0.2",
    "playwright>=1.58.0",
    "requests>=2.32.5",
    "selenium>=4.41.0",
    "setuptools>=82.0.1",
    "undetected-chromedriver>=3.5.5",
]
